--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -8,6 +8,8 @@
 
                 .main {
                     display: flex;
+                    background-color: #282C34;
+                    padding: 5px;
                 }
 
                 .container {
@@ -38,16 +40,24 @@
                     width: 71%;
                 }
 
+                .banging {
+                    font-size: 28px;
+                    color: #666;
+                    text-align: center;
+                    margin-top: 3px;
+                }
+
                 .song {
                     font-size: 24px;
-                    color: #666;
+                    color: #C6A86F;
+                    font-weight: bold;
                     text-align: center;
                     margin-top: 3px;
                 }
 
                 .artist {
                     font-size: 20px;
-                    color: #b3b3b3;
+                    color: #D66A71;
                     text-align: center;
                     margin-bottom: 5px;
                 }
@@ -72,7 +82,7 @@
                 }
 
                 .bar {
-                    background: #1DB954cc;
+                    background: #D66A71cc;
                     bottom: 1px;
                     height: 3px;
                     position: absolute;
@@ -105,6 +115,7 @@
                 </a>
 
                 <div class="text">
+                    <div class="banging">Current banger</div>
                     <div class="song">{{song_name}}</div>
                     <div class="artist">{{artist_name}}</div>
                     <div id="bars">
