--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -10,6 +10,7 @@
                     display: flex;
                     background-color: #282C34;
                     padding: 5px;
+                    box-sizing: border-box;
                 }
 
                 .container {
