--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -9,8 +9,8 @@
                 .main {
                     display: flex;
                     background-color: #282C34;
-                    padding: 10px;
-                    border-radius: 7px;
+                    padding: 10px 10px 10px 5px;
+                    border-radius: 5px;
                 }
 
                 .container {
